--- a/src/app/pages/cadastro/cadastro-medico/cadastro-medico.component.html
+++ b/src/app/pages/cadastro/cadastro-medico/cadastro-medico.component.html
@@ -178,6 +178,14 @@
                       </div>
                     </div>
                     <div class="form-group row pl-3">
+                      <div class="col-md-3">
+                        <label for="cpf">CNPJ*</label>
+                        <input class="form-control" name="federalId" id="federalId" type="text"
+                          formControlName="federalId" mask="00.000.000/0000-00" maxlength="18" 
+                          (change)="buscaClinica($event.target.value)"/>
+                      </div>
+                    </div>
+                    <div class="form-group row pl-3">
                       <div class="col-md-6">
                         <label for="name">Nome*</label>
                         <input class="form-control" name="name" id="name" type="text" formControlName="name" />
@@ -188,18 +196,7 @@
                           formControlName="socialName" />
                       </div>
                     </div>
-                    <div class="form-group row pl-3">
-                      <div class="col-md-3">
-                        <label for="cpf">CNPJ*</label>
-                        <input class="form-control" name="federalId" id="federalId" type="text"
-                          formControlName="federalId" mask="00.000.000/0000-00" maxlength="18" />
-                      </div>
-                      <div class="col-md-2">
-                        <label for="cellPhone">Celular*</label>
-                        <input class="form-control" name="cellPhone" id="cellPhone" type="text"
-                          formControlName="cellPhone" [dropSpecialCharacters]="true"
-                          mask="(00) 0 0000-0000 || (00) 0000-0000" maxlength="16" />
-                      </div>
+                    <div class="form-group row pl-3">                     
                       <div class="col-md-3">
                         <label for="estado">Estado*</label>
                         <select class="form-control" formControlName="ufId" (change)="buscaCidade($event.target.value)">
@@ -216,15 +213,21 @@
                             cidade.description}}</option>
                         </select>
                       </div>
-                    </div>
-                    <div class="form-group row pl-3">
+                      <div class="col-md-2">
+                        <label for="cellPhone">Celular*</label>
+                        <input class="form-control" name="cellPhone" id="cellPhone" type="text"
+                          formControlName="cellPhone" [dropSpecialCharacters]="true"
+                          mask="(00) 0 0000-0000 || (00) 0000-0000" maxlength="16" />
+                      </div>
                       <div class="col-md-2">
                         <label for="cep">Cep*</label>
                         <input class="form-control" name="zipCode" id="zipCode" type="text" formControlName="zipCode"
                           mask="00000-000" [dropSpecialCharacters]="true"
                           (blur)="buscaCep(formCadastroMedico.value, $event.target.id)" />
                       </div>
-                      <div class="col-md-3">
+                    </div>
+                    <div class="form-group row pl-3">                     
+                      <div class="col-md-4">
                         <label for="rua">Rua*</label>
                         <input class="form-control" name="street" id="street" type="text" formControlName="street"
                           [dropSpecialCharacters]="true" />
@@ -247,16 +250,16 @@
                     </div>
                     <div class="form-row align-items-center">
                       <div class="form-group col-md-12">
-                      <div class="col-md-12">
-                        <div class="text-right">
-                          <button class="btn btn-primary m-2" (click)="limpaFormEnd()">
-                            Limpar
-                          </button>                       
-                          <button class="btn btn-success m-2" (click)="adicionar(formCadastroMedico.value)">
-                            ADICIONAR
-                          </button>
+                        <div class="col-md-12">
+                          <div class="text-right">
+                            <button class="btn btn-primary m-2" (click)="limpaFormEnd()">
+                              Limpar
+                            </button>
+                            <button class="btn btn-success m-2" (click)="adicionar(formCadastroMedico.value)">
+                              ADICIONAR
+                            </button>
+                          </div>
                         </div>
-                      </div>
                       </div>
                     </div>
                     <div class="form-group col-md-12">
